Fix CV button mobile margin

--- a/app/[locale]/about/page.scss
+++ b/app/[locale]/about/page.scss
@@ -22,4 +22,8 @@
   .text-right {
     text-align: left;
   }
+
+  .mr-20 {
+    margin-right: 0;
+  }
 }
